plugins {
	/*
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
	 */
	id 'java'
	id 'org.springframework.boot' version '3.0.13'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'cl.creando'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

repositories {
	mavenCentral()
}

dependencies {
	// Core Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// JWT
	implementation "io.jsonwebtoken:jjwt-api:0.11.5"
	runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.5"
	runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.5"

	// Validation
	implementation 'javax.validation:validation-api:2.0.1.Final'
	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
	implementation 'org.glassfish:jakarta.el:4.0.2'

	// API Docs
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	// AWS & Google Cloud
	implementation 'software.amazon.awssdk:s3:2.20.142'
	implementation 'com.google.auth:google-auth-library-oauth2-http:1.7.0'
	implementation 'com.google.cloud:google-cloud-storage:2.28.0'

	// PDF
	implementation 'com.itextpdf:itext7-core:7.2.1'

	// Spring Boot + Thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	// Flying Saucer con OpenPDF
	implementation 'org.xhtmlrenderer:flying-saucer-pdf-openpdf:9.4.0'

	// OpenHTMLToPDF (alternativa más moderna con más soporte CSS)
	implementation 'com.openhtmltopdf:openhtmltopdf-pdfbox:1.0.10'


	// Database
    runtimeOnly 'org.postgresql:postgresql'
    //runtimeOnly 'com.h2database:h2'
	//runtimeOnly 'com.mysql:mysql-connector-j'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// --- TESTING ---

	// Unit testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test' // Includes JUnit 5, Mockito, AssertJ, Hamcrest
	testImplementation 'org.springframework.security:spring-security-test'

	// Testcontainers for integration testing (optional but powerful)
	testImplementation 'org.testcontainers:junit-jupiter:1.19.0'
	testImplementation 'org.testcontainers:mysql:1.19.0'

	// H2 database for testing
	testRuntimeOnly 'com.h2database:h2'
}

tasks.named('test') {
	useJUnitPlatform()
}
